--- a/TNTBot.csproj
+++ b/TNTBot.csproj
@@ -12,5 +12,6 @@
   <ItemGroup>
     <PackageReference Include="Discord.Net" Version="3.2.0"/>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1"/>
+    <PackageReference Include="Microsoft.Data.Sqlite" Version="6.0.1"/>
   </ItemGroup>
 </Project>
