--- a/TNTBot.csproj
+++ b/TNTBot.csproj
@@ -13,5 +13,6 @@
     <PackageReference Include="Discord.Net" Version="3.3.0"/>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1"/>
     <PackageReference Include="Microsoft.Data.Sqlite" Version="6.0.1"/>
+    <PackageReference Include="MathNet.Numerics" Version="5.0.0-alpha16"/>
   </ItemGroup>
 </Project>
