--- a/TNTBot.csproj
+++ b/TNTBot.csproj
@@ -14,5 +14,6 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1"/>
     <PackageReference Include="Microsoft.Data.Sqlite" Version="6.0.1"/>
     <PackageReference Include="MathNet.Numerics" Version="5.0.0-alpha16"/>
+    <PackageReference Include="DotNetEnv" Version="2.3.0"/>
   </ItemGroup>
 </Project>
