--- a/TNTBot.csproj
+++ b/TNTBot.csproj
@@ -10,10 +10,10 @@
   <ItemGroup>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Discord.Net" Version="3.3.0"/>
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.1"/>
-    <PackageReference Include="Microsoft.Data.Sqlite" Version="6.0.1"/>
-    <PackageReference Include="MathNet.Numerics" Version="5.0.0-alpha16"/>
-    <PackageReference Include="DotNetEnv" Version="2.3.0"/>
+    <PackageReference Include="Discord.Net" Version="3.7.2" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="Microsoft.Data.Sqlite" Version="6.0.7" />
+    <PackageReference Include="MathNet.Numerics" Version="5.0.0" />
+    <PackageReference Include="DotNetEnv" Version="2.3.0" />
   </ItemGroup>
 </Project>
