--- a/.editorconfig
+++ b/.editorconfig
@@ -9,3 +9,6 @@ dotnet_diagnostic.IDE0005.severity = suggestion
 dotnet_diagnostic.IDE0060.severity = none
 # Disable "Member does not access instance data and can be marked as static."
 dotnet_diagnostic.CA1822.severity = none
+
+indent_style = space
+indent_size = 2
