--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
       "request": "launch",
       "preLaunchTask": "build",
       // If you have changed target frameworks, make sure to update the program path.
-      "program": "${workspaceFolder}/bin/Debug/net6.0/TNTBot.dll",
+      "program": "${workspaceFolder}/bin/Debug/net6.0/MoeBot.dll",
       "args": [
         "--dev",
       ],
@@ -28,7 +28,7 @@
       "request": "launch",
       "preLaunchTask": "build",
       // If you have changed target frameworks, make sure to update the program path.
-      "program": "${workspaceFolder}/bin/Debug/net6.0/TNTBot.dll",
+      "program": "${workspaceFolder}/bin/Debug/net6.0/MoeBot.dll",
       "args": [
         "--dev",
         "--register-commands",
