Revert "csproj: remove RuntimeIdentifiers, related issue was fixed"
This reverts commit 28ab5a3094fbc009a84fd0efae5282621984cd93.

After updating the lockfile, many dependencies get removed that are
required for the nix build.

--- a/moe.csproj
+++ b/moe.csproj
@@ -6,6 +6,7 @@
     <Nullable>enable</Nullable>
     <Version>1.6.2</Version>
     <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
+    <RuntimeIdentifiers>linux-x64;linux-arm64</RuntimeIdentifiers>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="CommandLineParser" Version="2.9.1" />
